--- a/views/layouts/planB.hbs
+++ b/views/layouts/planB.hbs
@@ -8,8 +8,6 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
   <body>
-    <h1>This is the plan B page</h1>
-    {{!-- We could use the same body as the index.hbs page --}}
-    {{!-- using the {{{body}}}, you remember it right ?--}}
+    {{{body}}}
   </body>
 </html>
