--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,13 @@
+nav{
+    background-color: rgb(22, 22, 22);
+    display: flex;
+    justify-content: space-around;
+    color: rgb(255, 15, 15);
+    text-shadow: 1px 1px rgb(80, 56, 56);
+    
+}
+
+
 li {
     font-size: 2rem;
     width: 300px;
@@ -5,6 +15,10 @@ li {
     padding: 4px;
     list-style: none;
     display: inline;
-    }
-    .midlaner {background-color: #eeeeee}
-    .toplaner {background-color: #ffea00}
+        }
+
+body{
+    background-image: url(../Imagenes/foto1.png);
+}
+
+   
