--- a/views/partials/caratulas.hbs
+++ b/views/partials/caratulas.hbs
@@ -1,10 +1,10 @@
 <div class="images"></div>
         <ul class="portadas">
-          <li><a href="#"><img src="caratula/Caratula 1.jpg" border="5" alt=""/></a></li>          
-          <li><a href="#"><img src="caratula/Caratula 2.jpg" border="5" alt=""/></a></li>
-          <li><a href="#"><img src="caratula/Caratula 3.jpg" border="5" alt=""/></a></li>
-          <li><a href="#"><img src="caratula/Caratula 4.jpg" border="5" alt=""/></a></li>
-          <li><a href="#"><img src="caratula/Caratula 5.jpg" border="5" alt=""/></a></li>
+          <li><a href="#"><img src="Imagenes/caratula/Caratula 1.jpg" border="5" alt=""/></a></li>          
+          <li><a href="#"><img src="Imagenes/caratula/Caratula 2.jpg" border="5" alt=""/></a></li>
+          <li><a href="#"><img src="Imagenes/caratula/Caratula 3.jpg" border="5" alt=""/></a></li>
+          <li><a href="#"><img src="Imagenes/caratula/Caratula 4.jpg" border="5" alt=""/></a></li>
+          <li><a href="#"><img src="Imagenes/caratula/Caratula 5.jpg" border="5" alt=""/></a></li>
                     
         </ul>
     
