Añadido barra buscador + solución carátulas

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />  
     <title>My Awesome App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <link rel="stylesheet" type="text/css" href="./style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="barraBuscador.css"/>
+    <link rel="stylesheet" type="text/css" href="estilos.css"/>
   </head>
   <body>
     
     {{{body}}}
+
+    <script src="barraBuscador.js"></script>
   </body>
 </html>
