--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" type="text/css" href="barraBuscador.css"/>
     <link rel="stylesheet" type="text/css" href="estilos.css"/>
+    <link rel="stylesheet" type="text/css" href="barraSuperior.css"/>
   </head>
   <body>
     
