--- a/views/layouts/planB.hbs
+++ b/views/layouts/planB.hbs
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />  
     <title>My Awesome App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="estilos.css"/>
+    <link rel="stylesheet" type="text/css" href="barraSuperior.css"/>
+    <link rel="stylesheet" type="text/css" href="barraTitulo.css"/>
   </head>
   <body>
     {{{body}}}
