--- a/views/partials/caratulas.hbs
+++ b/views/partials/caratulas.hbs
@@ -1,6 +1,6 @@
 <div class="images"></div>
         <ul class="portadas">
-          <li><a href="#"><img src="Imagenes/caratulas/Caratula 1.jpg" border="5" alt=""/></a></li>          
+          <li><a href="detalle"><img src="Imagenes/caratulas/Caratula 1.jpg" border="5" alt=""/></a></li>          
           <li><a href="#"><img src="Imagenes/caratulas/Caratula 2.jpg" border="5" alt=""/></a></li>
           <li><a href="#"><img src="Imagenes/caratulas/Caratula 3.jpg" border="5" alt=""/></a></li>
           <li><a href="#"><img src="Imagenes/caratulas/Caratula 4.jpg" border="5" alt=""/></a></li>
