Eliminar o nombrar  listado de los libros

--- a/views/partials/atomos/botones/listadelibros.hbs
+++ b/views/partials/atomos/botones/listadelibros.hbs
@@ -1,9 +1,9 @@
-<h2>Listado actual de libros</h2>
-<ul>
-  <li>Relatos eroticos</li>
-  <li>Todo o Nada</li>
-  <li>Hazme Disfrutar</li>
-  <li>El contrato</li>
-  <li> La Sumisa Insumisa</li>
-</ul>
+  {{!-- <h2>Listado actual de libros</h2>
+  <ul>
+    <li>Relatos eroticos</li>
+    <li>Todo o Nada</li>
+    <li>Hazme Disfrutar</li>
+    <li>El contrato</li>
+    <li> La Sumisa Insumisa</li>
+  </ul> --}}
 
