--- a/public/barraSuperior.css
+++ b/public/barraSuperior.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+
 nav{
     background-color: rgb(22, 22, 22);
     display: flex;
@@ -10,9 +17,9 @@ nav{
   
   h1{
     font-size: 4rem;
-    width: 379px;
-    margin: 0px;
-    padding: 4px;
+    width: 8rem;
+    margin: 1rem;
+    padding: 0rem;
     list-style: none;
     display: inline;
      }
@@ -23,10 +30,11 @@ nav{
       height: 65px;
      color: red;
      display: flex;
-     align-content:stretch;
+     align-items:stretch;
+     justify-content: flex-start;
      font-family: 'Yeon Sung', cursive;
      text-align:justify;
-     padding: 27px;
+     padding: 0rem;
   }
   
   .boton_personalizado{
