--- a/public/estilos.css
+++ b/public/estilos.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+ 
  .portadas{
    padding: 17px;
    margin: 10px;
