--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+
 nav{
     background-color: rgb(22, 22, 22);
     display: flex;
@@ -10,7 +17,6 @@ nav{
 
 li {
     font-size: 2rem;
-    width: 300px;
     margin: 4px;
     padding: 4px;
     list-style: none;
@@ -18,7 +24,8 @@ li {
         }
 
 body{
-    background-image: url(../Imagenes/foto1.png);
+    background-image: url(../Imagenes/foto2.png);
+    background-size: cover;
 }
 
    
