--- a/public/sinopsisLibro1.css
+++ b/public/sinopsisLibro1.css
@@ -5,15 +5,15 @@
     list-style: none;
 }
 
-.tituloLibro{
+#areaSinopsis{
     display: flex;
     width: 45rem;
-    height: 4rem;
+    height: 20rem;
     margin-left: 35rem;
     margin-top: 2rem;
     color: black;
     background-color:rgba(203, 10, 10, 50%);
-    font-size: 2rem;
+    font-size: 1rem;
     border: none;
     padding-left: 1rem;
 }
