--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,10 @@
+*{
+	margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+
 nav{
     background-color: rgb(22, 22, 22);
     display: flex;
@@ -19,6 +26,8 @@ li {
 
 body{
     background-image: url(../Imagenes/foto1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
    
