--- a/views/layouts/planB.hbs
+++ b/views/layouts/planB.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="estilos.css"/>
     <link rel="stylesheet" type="text/css" href="barraSuperior.css"/>
     <link rel="stylesheet" type="text/css" href="barraTitulo.css"/>
+    <link rel="stylesheet" type="text/css" href="sinopsisLibro1.css"/>
   </head>
   <body>
     {{{body}}}
