--- a/views/partials/barraTitulo.hbs
+++ b/views/partials/barraTitulo.hbs
@@ -1,1 +1,1 @@
-<input type="text" name="barraTitulo" placeholder="Título del libro" class="tituloLibro"/>
+<h2 class="tituloLibro">Relatos eróticos</h2>
