--- a/views/layouts/planB.hbs
+++ b/views/layouts/planB.hbs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="barraSuperior.css"/>
     <link rel="stylesheet" type="text/css" href="barraTitulo.css"/>
     <link rel="stylesheet" type="text/css" href="sinopsisLibro1.css"/>
+    <link rel="stylesheet" type="text/css" href="accesorioLibro1.css"/>
   </head>
   <body>
     {{{body}}}
