Todo Ok 2. Cambio de la ruta de las carátulas al cambiar sus nombres

--- a/views/partials/caratulas.hbs
+++ b/views/partials/caratulas.hbs
@@ -1,10 +1,10 @@
 <div class="images"></div>
         <ul class="portadas">
-          <li><a href="detalle"><img src="Imagenes/caratulas/Caratula 1.jpg" border="5" alt=""/></a></li>          
-          <li><a href="#"><img src="Imagenes/caratulas/Caratula 2.jpg" border="5" alt=""/></a></li>
-          <li><a href="#"><img src="Imagenes/caratulas/Caratula 3.jpg" border="5" alt=""/></a></li>
-          <li><a href="#"><img src="Imagenes/caratulas/Caratula 4.jpg" border="5" alt=""/></a></li>
-          <li><a href="#"><img src="Imagenes/caratulas/Caratula 5.jpg" border="5" alt=""/></a></li>
+          <li><a href="detalle"><img src="Imagenes/caratulas/forma1.jpg" border="5" alt=""/></a></li>          
+          <li><a href="#"><img src="Imagenes/caratulas/forma2.jpg" border="5" alt=""/></a></li>
+          <li><a href="#"><img src="Imagenes/caratulas/forma3.jpg" border="5" alt=""/></a></li>
+          <li><a href="#"><img src="Imagenes/caratulas/forma4.jpg" border="5" alt=""/></a></li>
+          <li><a href="#"><img src="Imagenes/caratulas/forma5.jpg" border="5" alt=""/></a></li>
                     
         </ul>
     
