--- a/public/barraBuscador.css
+++ b/public/barraBuscador.css
@@ -8,7 +8,8 @@
 .desplegableBusqueda{
     display: flex;
     margin: auto;
-    margin-top: 30rem;
+    margin-top: 4rem;
+    margin-bottom: 2rem;
     border: 1px solid black;
     width: 40rem;
     height: 2.3rem;
