--- a/views/main2.hbs
+++ b/views/main2.hbs
@@ -1,4 +1,4 @@
 {{> barraSuperior}}
-{{> barraTitulo}}
-{{> sinopsisLibro1}}
-{{> accesorioLibro1}}
+{{> libro1/barraTitulo}}
+{{> libro1/sinopsisLibro1}}
+{{> libro1/accesorioLibro1}}
