--- a/public/barraSuperior.css
+++ b/public/barraSuperior.css
@@ -5,6 +5,13 @@
   list-style: none;
 }
 
+nav h1 a {
+  text-decoration: none;
+}
+nav h1 a:visited{
+  color: rgb(255, 15, 15);
+}
+
 nav{
     background-color: rgb(22, 22, 22);
     display: flex;
