--- a/views/partials/barraSuperior.hbs
+++ b/views/partials/barraSuperior.hbs
@@ -1,9 +1,9 @@
 <header>
 
     <nav>
-        <h1><a class="boton_personalizado" href="#">AÑADIR</a></h1>       
+        <h1><a class="boton_personalizado" href="/new">AÑADIR</a></h1>       
         <ul>
-            <h1 class="enunciado">LIBRETUCA PICANTITA</h1>
+            <h1 class="enunciado"><a href="/">LIBRETUCA PICANTITA</a></h1>
        </ul>
    </nav>
  
