modificacion url libro a relatos eroticos. A tope de SEO

--- a/views/partials/caratulas.hbs
+++ b/views/partials/caratulas.hbs
@@ -1,6 +1,6 @@
 <div class="images"></div>
         <ul class="portadas">
-          <li><a href="detalle"><img src="Imagenes/caratulas/forma1.jpg" border="5" alt=""/></a></li>          
+          <li><a href="relatoseroticos"><img src="Imagenes/caratulas/forma1.jpg" border="5" alt=""/></a></li>          
           <li><a href="#"><img src="Imagenes/caratulas/forma2.jpg" border="5" alt=""/></a></li>
           <li><a href="#"><img src="Imagenes/caratulas/forma3.jpg" border="5" alt=""/></a></li>
           <li><a href="#"><img src="Imagenes/caratulas/forma4.jpg" border="5" alt=""/></a></li>
