--- a/views/partials/caratulas.hbs
+++ b/views/partials/caratulas.hbs
@@ -1,7 +1,7 @@
 <div class="images"></div>
         <ul class="portadas">
           <li><a href="relatoseroticos"><img src="Imagenes/caratulas/forma1.jpg" border="5" alt=""/></a></li>          
-          <li><a href="#"><img src="Imagenes/caratulas/forma2.jpg" border="5" alt=""/></a></li>
+          <li><a href="todoonada"><img src="Imagenes/caratulas/forma2.jpg" border="5" alt=""/></a></li>
           <li><a href="#"><img src="Imagenes/caratulas/forma3.jpg" border="5" alt=""/></a></li>
           <li><a href="#"><img src="Imagenes/caratulas/forma4.jpg" border="5" alt=""/></a></li>
           <li><a href="#"><img src="Imagenes/caratulas/forma5.jpg" border="5" alt=""/></a></li>
