--- a/views/layouts/planB.hbs
+++ b/views/layouts/planB.hbs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="sinopsisLibro1.css"/>
     <link rel="stylesheet" type="text/css" href="accesorioLibro1.css"/>
     <link rel="stylesheet" type="text/css" href="precioLibro1.css"/>
+    <link rel="stylesheet" type="text/css" href="portadaDetalle.css"/>
       </head>
   <body>
     {{{body}}}
