Añadido tamaño portadas, editado tamaño portada detalle 4  con css nuevo

--- a/views/partials/libro4/portadalibro4.hbs
+++ b/views/partials/libro4/portadalibro4.hbs
@@ -1,4 +1,4 @@
     <figure>
-       <img class="portadaDetalle"src= "/Imagenes/libro 4.jpg" alt="Portada El Contrato">
+       <img class="portadaDetalle4"src= "/Imagenes/libro 4.jpg" alt="Portada El Contrato">
     </figure>
     
