--- a/views/layouts/planB.hbs
+++ b/views/layouts/planB.hbs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="estilos.css"/>
-    <link rel="stylesheet" type="text/css" href="barraSuperior.css"/>
+    <link rel="stylesheet" type="text/css" href="barrasuperior2.css"/>
     <link rel="stylesheet" type="text/css" href="barraTitulo.css"/>
     <link rel="stylesheet" type="text/css" href="sinopsisLibro1.css"/>
     <link rel="stylesheet" type="text/css" href="accesorioLibro1.css"/>
