Colocacion de la caraturla 5
En rutar la caratula 5 y demas accesorios

--- a/views/partials/libro1/sinopsisLibro1.hbs
+++ b/views/partials/libro1/sinopsisLibro1.hbs
@@ -1,2 +1,2 @@
        <p id="areaSinopsis">Relatos eróticos es la narración de diferentes versiones de los cuentos de Disney. 
-        Grandes títulos como La bella durmiente,</p>
+        Grandes títulos como La bella durmiente,"Sedúceme nace con la intención de contener historias. Relatos que muestren una realidad concreta, que refl ejen una situación precisa, que avisen de la inminencia de un momento. Y este libro lucha contra varios prejuicios, y desea romper lanzas y unifi car deseos. Pero, sobre todo, pretende ser literatura y gustar a los lectores. La seducción es un juego, un arte, un desafío... uno de los mayores placeres del sexo. ¡Déjate seducir!"</p>
