--- a/views/partials/caratulas.hbs
+++ b/views/partials/caratulas.hbs
@@ -4,7 +4,7 @@
           <li><a href="todoonada"><img src="Imagenes/caratulas/forma2.jpg" border="5" alt=""/></a></li>
           <li><a href="hazmedisfrutar"><img src="Imagenes/caratulas/forma3.jpg" border="5" alt=""/></a></li>
           <li><a href="elcontrato"><img src="Imagenes/caratulas/forma4.jpg" border="5" alt=""/></a></li>
-          <li><a href="#"><img src="Imagenes/caratulas/forma5.jpg" border="5" alt=""/></a></li>
+          <li><a href="lasumisainsumisa"><img src="Imagenes/caratulas/forma5.jpg" border="5" alt=""/></a></li>
           
                     
         </ul>
