--- a/views/layouts/planB.hbs
+++ b/views/layouts/planB.hbs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="accesorioLibro1.css"/>
     <link rel="stylesheet" type="text/css" href="precioLibro1.css"/>
     <link rel="stylesheet" type="text/css" href="portadaDetalle.css"/>
+    <link rel="stylesheet" type="text/css" href="portadaDetalleL2.css"/>
     <link rel="stylesheet" type="text/css" href="portadaDetalleL4.css"/>
       </head>
   <body>
