Foto caratula detalle libro 5

--- a/views/layouts/planB.hbs
+++ b/views/layouts/planB.hbs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="portadaDetalle.css"/>
     <link rel="stylesheet" type="text/css" href="portadaDetalleL2.css"/>
     <link rel="stylesheet" type="text/css" href="portadaDetalleL4.css"/>
+    <link rel="stylesheet" type="text/css" href="portadaDetalleL5.css"/>
       </head>
   <body>
     {{{body}}}
