--- a/views/partials/FormNewBook/portadanewLibro.hbs
+++ b/views/partials/FormNewBook/portadanewLibro.hbs
@@ -1,4 +1,4 @@
-<section>
+<section id="portadaNuevo">
     <label for="imagen">Portada:</label>
     <input type="file" name="imagen" id="imagen">
 </section>
