--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -9,6 +9,10 @@
     <link rel="stylesheet" type="text/css" href="barraBuscador.css"/>
     <link rel="stylesheet" type="text/css" href="estilos.css"/>
     <link rel="stylesheet" type="text/css" href="barraSuperior.css"/>
+    <link rel="stylesheet" type="text/css" href="accesorioNew.css"/>
+    <link rel="stylesheet" type="text/css" href="portadaNew.css"/>
+    <link rel="stylesheet" type="text/css" href="precioNew.css"/>
+    <link rel="stylesheet" type="text/css" href="tituloNew.css"/>
   </head>
   <body>
     
