Ya vuelve atras

--- a/views/partials/barrasuperior2.hbs
+++ b/views/partials/barrasuperior2.hbs
@@ -2,7 +2,7 @@
     <nav>
         <h1><a class="boton_personalizado" href="/relatoseroticos/editar">EDITAR</a></h1>       
         <ul>
-            <h1 class="enunciado"><a href="/">LIBRETUCA PICANTITA</a></h1>
+            <h1 class="enunciado"><a href="/listadolibros">LIBRETUCA PICANTITA</a></h1>
        </ul>
        <h1><a class="boton_personalizado" href="/">ELIMINAR</a></h1>
    </nav>
