Formulario nuevo libro con formato

--- a/public/tituloNew.css
+++ b/public/tituloNew.css
@@ -7,7 +7,8 @@
 
 #name{
     display: flex;
-    width: 45rem;
+    margin-top: 8vh;
+    width: 4.5rem;
     height: 4rem;
     margin-left: 35rem;
     margin-top: 2rem;
@@ -16,4 +17,6 @@
     font-size: 2rem;
     border: none;
     padding-left: 1rem;
+    font-family: 'Courier New', Courier, monospace;
+    
 }
