--- a/views/addLibroTemplate.hbs
+++ b/views/addLibroTemplate.hbs
@@ -1,9 +1,8 @@
 {{> barraSuperior}}
 
 <form action="#" method="get">
-    <fieldset>
-        <legend>Datos del nuevo libro</legend>
-        {{> newLibro}}
+    <fieldset id="campoNuevoLibro">
+                {{> newLibro}}
     </fieldset>
 
     <button type="submit">Enviar</button>
