--- a/views/partials/FormNewBook/precionewLibro.hbs
+++ b/views/partials/FormNewBook/precionewLibro.hbs
@@ -1,4 +1,4 @@
 <section>
-    {{!-- <label for="price">Precio del libro</label> --}}
+    <label for="price">Precio del libro</label>
     <input type="text" id="price" name="price" placeholder="Precio">
 </section>
