--- a/views/partials/FormNewBook/titulonewLibro.hbs
+++ b/views/partials/FormNewBook/titulonewLibro.hbs
@@ -1,4 +1,4 @@
 <section>
-    {{!-- <label for="name">Título del libro</label> --}}
+    <label for="name">Título del libro</label>
     <input type="text" id="name" name="name" placeholder="Introducir el título del libro">
 </section>
