--- a/views/addLibroTemplate.hbs
+++ b/views/addLibroTemplate.hbs
@@ -1,8 +1,8 @@
-{{> barraSuperior}}
+{{> barraBuscador/barraSuperior}}
 
 <form action="#" method="get">
     <fieldset id="campoNuevoLibro">
-                {{> newLibro}}
+                {{> editar/newLibro}}
     </fieldset>
 
     <button type="submit">Enviar</button>
