--- a/views/editarlibroTemplate.hbs
+++ b/views/editarlibroTemplate.hbs
@@ -1,9 +1,9 @@
-{{> barrasuperior2}}
+{{> barraBuscador/barrasuperior2}}
 
 <form action="#" method="get">
     <fieldset>
         <legend>Datos del nuevo libro</legend>
-        {{> editarlibro}}
+        {{> editar/editarlibro}}
     </fieldset>
 
     <button type="submit">Enviar</button>
