--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,4 +1,3 @@
-{{> barraSuperior}}
-{{> atomos/botones/listadelibros}}
-{{> caratulas}}
-{{> barraBuscador}}
+{{> barraBuscador/barraSuperior}}
+{{> caratula/caratulas}}
+{{> barraBuscador/barraBuscador}}
