--- a/public/accesorioLibro1.css
+++ b/public/accesorioLibro1.css
@@ -1,11 +1,4 @@
-*{
-	margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-}
-
-#accesorio1{
+.accesorio1{
     display: flex;
     width: 8rem;
     height: 2rem;
