--- a/views/addLibroTemplate.hbs
+++ b/views/addLibroTemplate.hbs
@@ -1,6 +1,6 @@
 {{> barraBuscador/barraSuperior}}
 
-<form action="#" method="get">
+<form action="/FormNewBook/createBook" method="get">
     <fieldset id="campoNuevoLibro">
                 {{> editar/newLibro}}
     </fieldset>
