--- a/views/partials/FormNewBook/sinopsisnewLibro.hbs
+++ b/views/partials/FormNewBook/sinopsisnewLibro.hbs
@@ -1,5 +1,5 @@
 <section>
     
-    <textarea id="textarea" name="textarea" rows="10" cols="50" placeholder="Introducir sinopsis del libro" maxlength="30"
+    <textarea id="textarea" name="description" rows="10" cols="50" placeholder="Introducir sinopsis del libro"
         autofocus></textarea>
 </section>
