--- a/views/editarlibroTemplate.hbs
+++ b/views/editarlibroTemplate.hbs
@@ -1,11 +1,11 @@
 {{> barraBuscador/barrasuperior2}}
 
-<form action="#" method="get">
+<form action="" method="post">
     <fieldset>
-        <legend>Datos del nuevo libro</legend>
+        <legend>Datos del nuevo libro</le<button type="submit">Enviar</button>gend>
         {{> editar/editarlibro}}
     </fieldset>
 
-    <button type="submit">Enviar</button>
+    
     <button type="reset">Reset</button>
 </form>
