--- a/views/partials/FormNewBook/accesorionewLibro.hbs
+++ b/views/partials/FormNewBook/accesorionewLibro.hbs
@@ -1,6 +1,6 @@
 <section>
     <label for="access">Accesorio</label>
-    <input list="accessList" type="text" id="access" name="access" placeholder="Accesorio" />
+    <input list="accessList" type="text" id="access" name="accesorio" placeholder="Accesorio" />
     <datalist id="accessList">
         <option label="Gel" value="Gel"></option>
         <option label="Juguete" value="Juguete"></option>
