--- a/views/partials/FormNewBook/accesorionewLibro.hbs
+++ b/views/partials/FormNewBook/accesorionewLibro.hbs
@@ -1,5 +1,5 @@
-<section>
-    <label for="access">Accesorio</label>
+<section id="accesorioNuevo">
+    <label for="access"></label>
     <input list="accessList" type="text" id="access" name="accesorio" placeholder="Accesorio" />
     <datalist id="accessList">
         <option label="Gel" value="Gel"></option>
