--- a/views/partials/FormNewBook/titulonewLibro.hbs
+++ b/views/partials/FormNewBook/titulonewLibro.hbs
@@ -1,4 +1,4 @@
-<section>
-    <label for="name">Título del libro</label>
+<section id="tituloNuevo">
+    <label for="name"></label>
     <input type="text" id="name" name="title" placeholder="Introducir el título del libro">
 </section>
