--- a/views/partials/FormNewBook/sinopsisnewLibro.hbs
+++ b/views/partials/FormNewBook/sinopsisnewLibro.hbs
@@ -1,4 +1,4 @@
-<section>
+<section id="sinopsisNuevo">
     
     <textarea id="textarea" name="description" rows="10" cols="50" placeholder="Introducir sinopsis del libro"
         autofocus></textarea>
