--- a/views/partials/FormNewBook/stocknewLibro.hbs
+++ b/views/partials/FormNewBook/stocknewLibro.hbs
@@ -1,4 +1,4 @@
-<section>
+<section id="stockNuevo">
     <label for="stock">Stock disponible</label>
     <input type="text" id="stock" name="stock" placeholder="Introducir el stock del libro">
 </section>
