--- a/views/addLibroTemplate.hbs
+++ b/views/addLibroTemplate.hbs
@@ -1,6 +1,6 @@
 {{> barraBuscador/barraSuperior}}
 
-<form action="/FormNewBook/createBook" method="post">
+<form action="/FormNewBook/createBook" method="post" id="formularioNuevo">
     <fieldset id="campoNuevoLibro">
                 {{> editar/newLibro}}
     </fieldset>
