--- a/public/NewBook.css
+++ b/public/NewBook.css
@@ -1,9 +1,8 @@
 #campoNuevoLibro{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 98%;
-    height: 73vh;
+    width: 37rem;
+    height: 32rem;
     margin-left: 1rem;
     margin-top: 3rem;
     padding: 2rem;
@@ -15,9 +14,13 @@
     font-weight: bold;
     border: 1px inset black; 
 }
+
+
 section{
-    justify-content: space-around;
-    margin: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    margin: 5rem;
 }
 
 button{
@@ -34,8 +37,8 @@ button{
     display: flex;
     width: 7rem;
     height: 2rem;
-    margin-left: 35rem;
-    margin-top: 2rem;
+    margin-left: 33rem;
+    margin-top: -5rem;
     margin-bottom: 1rem;
     color: black;
     font-size: 1rem;
@@ -47,8 +50,8 @@ button{
     display: flex;
     width: 4.5rem;
     height: 2rem;
-    margin-left: 61rem;
-    margin-top: -3.2rem;
+    margin-left: 45rem;
+    margin-top: -5rem;
     margin-bottom: 3rem;
     color: black;
     font-size: 1.7rem;
@@ -60,8 +63,8 @@ button{
     display: flex;
     width: 45rem;
     height: 20rem;
-    margin-left: 35rem;
-    /* margin-top: 2rem; */
+    margin-left: 33rem;
+    margin-top: -26rem;
     color: black;
     font-size: 1rem;
     border: none;
@@ -72,15 +75,16 @@ button{
     display: flex;
     width: 60rem;
     height: 2rem;
-    margin-left: 10rem;
+    margin-left: 34rem;
     color: black;
     border: none;
+    margin-top: -29rem;
 }
 
 #portadaNuevo {
     display: flex;
-    margin-left: 1.5rem;
-    margin-top: -38rem;
+    margin-left: 0rem;
+    margin-top: -0rem;
     margin-bottom: 3rem;
     border: none;
     padding-left: 1rem;
@@ -88,13 +92,12 @@ button{
 
 #stockNuevo{
     display: flex;
-    width: 4.5rem;
+    width: 4rem;
     height: 2rem;
-    margin-left: 2rem;
-    margin-top: -3.2rem;
-    margin-bottom: 3rem;
+    margin-left: -31rem;
+    margin-top: 22rem;
+    margin-bottom: 5rem;
     color: black;
     font-size: 1.7rem;
     border: none;
-    padding-left: 1rem;
 }
